--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
+
+/*@layer components {*/
+/*    .search-input {*/
+/*        @apply w-60 mb-5 block;*/
+/*    }*/
+/*}*/
+
+/*@layer utilities {*/
+/*    .grayed-out-disabled {*/
+/*        @apply disabled:opacity-50;*/
+/*    }*/
+/*}*/
+
 * {
     box-sizing: border-box;
     color: #333;
